# news-extractor

./: .gitignore  README.md
news-extractor-backend/: pyproject.toml
news-extractor-backend/app/: main.py
news-extractor-frontend/: index.html  package-lock.json  package.json
news-extractor-frontend/src/: App.tsx
